--- a/src/app/payment-form/payment-form.component.html
+++ b/src/app/payment-form/payment-form.component.html
@@ -23,7 +23,7 @@
     <!-- <p>-------------------------------------OR--------------------------------------------</p> -->
         <div class="form-group">
 
-          <label for="address_line_1"><div class="row"><div class="col-md-2"> Address Line 1:</div>
+          <label for="address_line_1"><div class="row"><div class="col-md-2"> Address Line 1:<span style="color:red"> *</span></div>
             <div class="col-md-9">
             <input type="text" name="address_line_1" class="form-control" value="" formControlName="address_line_1" placeholder="Address Line 1"></div></div>
           </label>
@@ -31,7 +31,7 @@
        
   
         <div class="form-group"> 
-          <label for="address_line_2"><div class="row"><div class="col-md-2">Address Line 2:</div>
+          <label for="address_line_2"><div class="row"><div class="col-md-2">Address Line 2:<span style="color:red"> *</span></div>
             <div class="col-md-9">
             <input type="text" name="address_line_2" value="" class="form-control" formControlName="address_line_2" placeholder="Address Line 2"></div></div>
           </label>
@@ -39,35 +39,35 @@
         
     
     <div class="form-group">
-          <label for="country"><div class="row"><div class="col-md-2">Country:</div>
+          <label for="country"><div class="row"><div class="col-md-2">Country:<span style="color:red"> *</span></div>
             <div class="col-md-9">
             <input type="text" name="Country" class="form-control" value="" formControlName="country" placeholder="Country"></div></div>
           </label>
         </div>
 
     <div class="form-group">
-          <label for="city"><div class="row"><div class="col-md-2">City:</div>
+          <label for="city"><div class="row"><div class="col-md-2">City:<span style="color:red"> *</span></div>
             <div class="col-md-9">
             <input type="text" name="city" class="form-control" value="" formControlName="city" placeholder="City"></div></div>
           </label>
      </div>
     
     <div class="form-group">
-          <label for="altAddress"><div class="row"><div class="col-md-2">Alternative Address:</div>
+          <label for="altAddress"><div class="row"><div class="col-md-2">Alternative Address:<span style="color:red"> *</span></div>
             <div class="col-md-9">
             <input type="text" name="alt_address" class="form-control" value="" formControlName="alt_address" placeholder="Alternative Address"></div></div>
           </label>
     </div>
   
   <div class="form-group">
-          <label for="state"><div class="row"><div class="col-md-2">State/ Provience:</div>
+          <label for="state"><div class="row"><div class="col-md-2">State/ Provience:<span style="color:red"> *</span></div>
             <div clas="col-md-9">
             <input type="text" name="state" class="form-control" value="" formControlName="province" placeholder="State / Zone *" style="margin-left: 17px;"></div></div>
           </label>
         </div>
 
         <div class="form-group">
-            <label for="city"><div class="row"><div class="col-md-2">Postal Code:</div>
+            <label for="city"><div class="row"><div class="col-md-2">Postal Code:<span style="color:red"> *</span></div>
               <div class="col-md-9">
               <input type="text" name="postal_code" class="form-control" value="" formControlName="postal_code" placeholder="Postal Code"></div></div>
             </label>
@@ -75,13 +75,13 @@
 
 
         <div class="form-group">
-            <label for="phoneNumber" style="height: 90px"><div class="row"><div class="col-md-2">Phone Number:</div>
+            <label for="phoneNumber" style="height: 90px"><div class="row"><div class="col-md-2">Phone Number:<span style="color:red"> *</span></div>
               <div class="col-md-9">
               <input type="number" name="phoneNumber" value="" class="form-control" formControlName="alt_phone" placeholder="Phone Number" style="height: auto"></div></div>
             </label>
           </div>
           <div class="form-group">
-            <label for="phoneNumber" style="height: 90px"><div class="row"><div class="col-md-2">Alternate Phone Number:</div>
+            <label for="phoneNumber" style="height: 90px"><div class="row"><div class="col-md-2">Alternate Phone Number:<span style="color:red"> *</span></div>
               <div class="col-md-9">
               <input type="number" name="phoneNumber" value="" class="form-control" formControlName="Phone_2" placeholder="Phone Number" style="height: auto"></div></div>
             </label>
