--- a/src/app/customized-art/customized-art.component.html
+++ b/src/app/customized-art/customized-art.component.html
@@ -8,7 +8,7 @@
     
       <div class="headline" style="width:100%" >
         <h3 style="margin:05%">
-          Get Arts the way you have imagined <br> <br>
+          Get  what  you  imagine <br> <br>
           <a routerLink="/customizedarthelp"><button class="button"> How does customized art works? </button></a>
         </h3>
       </div>
