--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -13,7 +13,7 @@
 
                 <div>
                     <i class="fa fa-map-marker"></i>
-                    <p><span>Gothahar </span> Bhaktapur, Nepal</p>
+                    <p><span>Gothatar </span> Bhaktapur, Nepal</p>
                 </div>
 
                 <div>
